assets/src/scss/layout/header.scss
/* ... */
.header-search-button {
  background-color: $color-white;
  padding: 1.125em;

  &:hover,
  &:focus {
    background-color: $color-black;

    outline-color: $color-white;
    outline-offset: -2px;
    outline-style: solid;
    outline-width: 2px;
    svg {
      fill: $color-white;
    }
  }

  svg {
    height: 1em;
    width: 1em;
  }
}

.header-secure-area,
.header-language-switcher {
  position: relative;
}

.header-language-switcher--mobile {
  text-transform: uppercase;
  margin-bottom: 3em;

  .menu {
    display: flex;
    font-size: fix-font-size-hack(1.25em);
    gap: fix-font-size-hack(1.2em);
  }

  a.menu-link {
    color: $color-white;
    text-decoration: none;

    &:hover {
      text-decoration: underline;
    }

    &:focus {
      outline: 1px solid $color-white;
    }
  }

  .current-language {
    color: $color-white;
    font-weight: 700;
    text-decoration: underline;
  }
}

.header-language-switcher-trigger {
  background: none;
  border: 0;
  box-sizing: border-box;
  color: $color-black;
  cursor: pointer;
  font-weight: 600;
  height: 100%;
  line-height: fix-font-size-hack(1em);
  text-transform: uppercase;

  span {
    font-size: fix-font-size-hack(0.875em);
  }

  &:hover,
  &:active,
  &:focus,
  &[aria-expanded="true"] {
    color: $color-white;
  }

  // @TODO: Validate if necessary
  // &[aria-expanded="true"] {
  //   &:hover {
  //     outline-color: $color-white;
  //     outline-offset: -4px;
  //     outline-style: solid;
  //     outline-width: 2px;
  //   }
  // }
}

.header-secure-area-list,
.header-language-switcher-list {
  background-color: $color-black;
  color: $color-white;
  position: absolute;
  right: 0;
  top: 100%;
  white-space: nowrap;
}

.header-secure-area-list {
  padding: 2px;
}

.header-language-switcher-list {
  left: 0;
  padding: 0 2px 2px 2px;
  text-transform: uppercase;
}

.header-secure-area-list-item,
.header-language-switcher-list-item {
  a {
    align-items: center;
    color: $color-white;
    display: flex;
    padding: 0.438em 0.5em;
    text-decoration: none;

    span {
      font-size: fix-font-size-hack(0.875em);
    }

    &:hover,
    &:active,
    &:focus {
      background-color: $color-white;
      color: $color-black;
    }
  }
}

.header-secure-area-list-item + .header-secure-area-list-item,
.header-language-switcher-list-item {
  border-top: 1px solid $color-white;
}

.header-menu-trigger {
  position: relative;

  svg {
    transform: rotate(0);
    position: absolute;
  }
  .menu {
    opacity: 1;
  }
  .close {
    opacity: 0;
  }

  &[aria-expanded="true"] {
    svg {
      transform: rotate(180deg);
    }
    .menu {
      opacity: 0;
    }
    .close {
      opacity: 1;
    }
  }

  &:hover,
  &:focus {
    background-color: $color-black;
    svg.nav-mobile-icon {
      fill: $color-white;
    }
  }
}

.header-mobile-menu {
  animation: slide-out-left 0.5s ease;
  background-color: $color-black;
  display: none;
  position: relative;
  transform: translateX(-100vw);
  @include z-index("header", 30);

  &.open {
    animation: slide-in-left 0.5s ease;
    display: block;
  }

  .header-main-nav,
  .header-secondary-nav {
    display: block;
  }
}

// Main nav is present twice, once for each modifier: mobile, desktop
.header-main-nav {
  // Generic styles applicable to mobile and desktop
  .menu {
    display: flex;
  }

  .menu-item {
    align-items: center;
    display: flex;
    padding-top: fix-font-size-hack(0.375em);
  }

  a.menu-link {
    background-image: linear-gradient(90deg, $color-ul-red, $color-ul-red);
    background-position: left bottom;
    background-repeat: no-repeat;
    background-size: 0 4px;
    padding-bottom: fix-font-size-hack(0.417em);
    text-align: center;
    text-decoration: none;
    transition: background-size 0.25s ease;

    &:hover,
    &:focus {
      background-size: 100% 4px;
      background-position-x: left;
    }

    &:focus {
      outline-color: $color-white;
      outline-offset: 3px;
      outline-style: solid;
      outline-width: 1px;
    }

    &.is-active {
      background-position: left bottom;
      background-repeat: no-repeat;
      background-size: 100% 4px;
    }
  }

  // Main nav - Mobile specific layout and color
  &--mobile {
    margin-top: fix-font-size-hack(2.375em);
    margin-bottom: fix-font-size-hack(3em);

    .menu {
      flex-direction: column;
      gap: fix-font-size-hack(1em);
    }

    a.menu-link {
      color: $color-white;
      font-size: fix-font-size-hack(1.5em);
      line-height: 1.2;

      &.is-active {
        background-image: linear-gradient(90deg, $color-white, $color-white);
      }
    }
  }

  // Main nav - Desktop specific layout and color
  &--desktop {
    .menu {
      @include property-with-fluid-value(
        "column-gap",
        24px,
        32px,
        1280px,
        1600px
      );
    }

    a.menu-link {
      color: $color-black;
      font-size: fix-font-size-hack(1em);
      font-weight: 700;
      line-height: 1.25;

      &.is-active {
        background-image: linear-gradient(90deg, $color-black, $color-black);

        &:hover,
        &:focus {
          background-image: linear-gradient(
            90deg,
            $color-ul-red,
            $color-ul-red
          );
        }
      }
    }
  }
}
/* ... */

